--- a/Makefile.unix
+++ b/Makefile.unix
@@ -227,7 +227,7 @@ DYLIBS += libprotpars.so libproml.so libprotdist.so librestdist.so libseqboot.so
 SHARED := -shared
 
 # These for now, until we get this stuff debugged.
-BUILD_FAILURES := codml contml contrast dnamlk dnamove dolpenny kitsch neighbor pars proml promlk protpars restml retree
+BUILD_FAILURES := codml contml contrast dnamlk dnamove dolpenny fitch kitsch neighbor pars proml promlk protpars restml retree
 BUILD_FAILURES += draw2 drawgram drawinit drawtree
 PROGS := $(filter-out $(BUILD_FAILURES),$(PROGS))
 DYLIBS :=
