Remove draw programs from default build.
The draw programs have lots of problems.
I can get rid of the warnings, but they really need to be fixed carefully
by someone familiar with the code.

For example there's at least one function being called
with the wrong number of arguments.
I doubt I can just to throw in or subtract the right stuff.

For now, I'll just add them to BUILD_FAILURES

--- a/Makefile.unix
+++ b/Makefile.unix
@@ -228,6 +228,7 @@ SHARED := -shared
 
 # These for now, until we get this stuff debugged.
 BUILD_FAILURES := codml contml contrast dnamlk dnamove dolpenny fitch kitsch neighbor pars proml promlk protpars restml retree
+BUILD_FAILURES += draw2 drawgram drawinit drawtree
 PROGS := $(filter-out $(BUILD_FAILURES),$(PROGS))
 DYLIBS :=
 
