Factor the object builds into their own make module.

--- a/Makefile.unix
+++ b/Makefile.unix
@@ -41,196 +41,7 @@ SHELL := /bin/bash
 include customize.mk
 include proglist.mk
 include phony.mk
-
-#
-# Compile the shared stuff.
-#
-
-Slist.o:      Slist.c Slist.h
-	$(CC) -c Slist.c $(SHARED) -fPIC
-
-phylip.o:     phylip.c phylip.h Slist.h
-	$(CC) -c phylip.c $(SHARED) -fPIC 
-
-# Add this to include debugging facility.
-debug.o:      debug.c debug.h phylip.h Slist.h
-	$(CC) -c debug.c
-
-seq.o:        seq.c phylip.h seq.h
-	$(CC) -c seq.c $(SHARED) -fPIC
-
-ml.o:         ml.c phylip.h ml.h
-	$(CC) -c ml.c $(SHARED) -fPIC 
-
-rest_common.o:  rest_common.c rest_common.h phylip.h
-	$(CC) -c rest_common.c $(SHARED) -fPIC
-
-prom_common.o:  prom_common.c prom_common.h phylip.h
-	$(CC) -c prom_common.c $(SHARED) -fPIC
-
-parsimony.o:  parsimony.c phylip.h parsimony.h
-	$(CC) -c parsimony.c $(SHARED) -fPIC
-
-dnaparsimony.o:  dnaparsimony.c phylip.h parsimony.h dnaparsimony.h
-	$(CC) -c dnaparsimony.c $(SHARED) -fPIC
-
-disc.o:       disc.c phylip.h disc.h
-	$(CC) -c disc.c $(SHARED) -fPIC
-
-discreteparsimony.o:   discreteparsimony.c discreteparsimony.h phylip.h parsimony.h
-	$(CC) -c discreteparsimony.c $(SHARED) -fPIC
-
-dollo.o:      dollo.c phylip.h dollo.h
-	$(CC) -c dollo.c $(SHARED) -fPIC
-
-wagner.o:     wagner.c phylip.h wagner.h
-	$(CC) -c wagner.c $(SHARED) -fPIC
-
-dist.o:       dist.c phylip.h dist.h
-	$(CC) -c dist.c $(SHARED) -fPIC
-
-cont.o:       cont.c cont.h phylip.h
-	$(CC) -c cont.c $(SHARED) -fPIC
-
-moves.o:      moves.c phylip.h moves.h
-	$(CC) -c moves.c
-
-cons.o:       cons.c cons.h phylip.h
-	$(CC) -c cons.c $(SHARED) -fPIC
-
-pmatrix.o:    pmatrix.c pmatrix.h
-	$(CC) -c pmatrix.c $(SHARED) -fPIC
-
-matrixd.o:    matrixd.c matrixd.h
-	$(CC) -c matrixd.c $(SHARED) -fPIC
-
-drawinit.o:   drawinit.c draw.c draw2.c draw.h
-	$(CC) -c drawinit.c $(SHARED) -fPIC
-
-#
-# Compile the individual programs.
-#
-
-clique.o:     clique.c disc.h phylip.h
-	$(CC) -c clique.c $(SHARED) -fPIC
-
-codml.o:      codml.c ml.h seq.h phylip.h
-	$(CC) -c codml.c $(SHARED) -fPIC
-
-consense.o:   consense.c cons.h phylip.h
-	$(CC) -c consense.c $(SHARED) -fPIC
-
-contml.o:     contml.c cont.h phylip.h ml.h Slist.h
-	$(CC) -c contml.c $(SHARED) -fPIC
-
-contrast.o:   contrast.c cont.h phylip.h
-	$(CC) -c contrast.c $(SHARED) -fPIC
-
-dnacomp.o:    dnacomp.c seq.h phylip.h dnaparsimony.h parsimony.h
-	$(CC) -c dnacomp.c $(SHARED) -fPIC
-
-dnadist.o:    dnadist.c seq.h pmatrix.h phylip.h
-	$(CC) -c dnadist.c $(SHARED) -fPIC
-
-dnainvar.o:   dnainvar.c seq.h phylip.h
-	$(CC) -c dnainvar.c $(SHARED) -fPIC
-
-dnaml.o:      dnaml.c seq.h ml.h phylip.h
-	$(CC) -c dnaml.c $(SHARED) -fPIC
-
-dnamlk.o:     dnamlk.c seq.h ml.h phylip.h
-	$(CC) -c dnamlk.c $(SHARED) -fPIC
-
-dnamove.o:    dnamove.c seq.h moves.h phylip.h parsimony.h dnaparsimony.h
-	$(CC) -c dnamove.c
-
-dnapars.o:    dnapars.c seq.h phylip.h parsimony.h dnaparsimony.h
-	$(CC) -c dnapars.c $(SHARED) -fPIC
-
-dnapenny.o:   dnapenny.c seq.h phylip.h parsimony.h dnaparsimony.h
-	$(CC) -c dnapenny.c $(SHARED) -fPIC
-
-dolmove.o:    dolmove.c disc.h moves.h dollo.h phylip.h
-	$(CC) -c dolmove.c
-
-dollop.o:     dollop.c disc.h dollo.h phylip.h
-	$(CC) -c dollop.c $(SHARED) -fPIC
-
-dolpenny.o:   dolpenny.c disc.h dollo.h phylip.h
-	$(CC) -c dolpenny.c $(SHARED) -fPIC
-
-draw.o:       draw.c draw.h phylip.h
-	$(DC) -c draw.c $(SHARED) -fPIC
-
-draw2.o:      draw2.c draw.h phylip.h
-	$(DC) -c draw2.c $(SHARED) -fPIC
-
-drawgram.o:   drawinit.c drawgram.c draw.h phylip.h Slist.h
-	$(DC) -c drawgram.c $(SHARED) -fPIC
-
-drawtree.o:   drawinit.c drawtree.c draw.h phylip.h Slist.h
-	$(DC) -c drawtree.c $(SHARED) -fPIC
-
-factor.o:     factor.c phylip.h
-	$(CC) -c factor.c $(SHARED) -fPIC
-
-fitch.o:      fitch.c dist.h phylip.h ml.h Slist.h
-	$(CC) -c fitch.c $(SHARED) -fPIC
-
-gendist.o:    gendist.c phylip.h pmatrix.c pmatrix.h
-	$(CC) -c gendist.c $(SHARED) -fPIC
-
-interface.o:  interface.c interface.h draw.h phylip.h
-	$(DC) -c interface.c $(SHARED) -fPIC
-
-kitsch.o:     kitsch.c dist.h ml.h phylip.h
-	$(CC) -c kitsch.c $(SHARED) -fPIC
-
-mix.o:        mix.c disc.h wagner.h phylip.h
-	$(CC) -c mix.c $(SHARED) -fPIC
-
-move.o:       move.c disc.h moves.h wagner.h phylip.h
-	$(CC) -c move.c
-
-neighbor.o:   neighbor.c dist.h phylip.h
-	$(CC) -c neighbor.c $(SHARED) -fPIC
-
-pars.o:       pars.c discreteparsimony.h phylip.h parsimony.h
-	$(CC) -c pars.c $(SHARED) -fPIC
-
-penny.o:      penny.c disc.h wagner.h phylip.h
-	$(CC) -c penny.c $(SHARED) -fPIC
-
-proml.o:      proml.c seq.h ml.h phylip.h prom_common.h prom_common.c
-	$(CC) -c proml.c $(SHARED) -fPIC
-
-promlk.o:     promlk.c seq.h ml.h phylip.h prom_common.h prom_common.c
-	$(CC) -c promlk.c $(SHARED) -fPIC
-
-protdist.o:   protdist.c seq.h phylip.h pmatrix.c pmatrix.h
-	$(CC) -c protdist.c $(SHARED) -fPIC
-
-protpars.o:   protpars.c seq.h phylip.h parsimony.h
-	$(CC) -c protpars.c $(SHARED) -fPIC
-
-restdist.o:   restdist.c rest_common.h seq.h phylip.h pmatrix.c pmatrix.h
-	$(CC) -c restdist.c $(SHARED) -fPIC
-
-restml.o:     restml.c rest_common.h seq.h ml.h phylip.h
-	$(CC) -c restml.c $(SHARED) -fPIC
-
-retree.o:     retree.c moves.h phylip.h
-	$(CC) -c retree.c
-
-seqboot.o:    seqboot.c phylip.h
-	$(CC) -c seqboot.c $(SHARED) -fPIC
-
-threshml.o:   threshml.c cont.h phylip.h Slist.h
-	$(CC) -c threshml.c $(SHARED) -fPIC
-
-treedist.o:   treedist.c cons.h phylip.h
-	$(CC) -c treedist.c $(SHARED) -fPIC
-
+include dot-o.mk
 include progs.mk
 include shared-libs.mk
 include depend.mk
